--- a/src/securitySchemes/bearerAuth.yaml
+++ b/src/securitySchemes/bearerAuth.yaml
@@ -1,4 +1,5 @@
 bearerAuth:
   type: http # this needs to be 'mutualTLS' which is supported in OAS 3.1.0 but tooling is lagging
   scheme: mutual
-  description: Chia uses mutualTLS bearerAuth where client and server share TLS keys.
+  description: ->
+    Chia uses [mutualTLS bearerAuth](https://github.com/dkackman/chia-api/wiki/Mutual-TLS) where client and server share TLS keys.
