--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,15 +3,76 @@
     // for the documentation about the tasks.json format
     "version": "2.0.0",
     "tasks": [
-        { 
-            "label": "build",
+        {
+            "label": "debug",
             "type": "shell",
             "command": "./build1.ps1",
+            "args": [
+                "-file",
+                "wallet.yaml"
+            ],
             "problemMatcher": [],
+            "dependsOn": [
+                "clean",
+                "prepare"
+            ],
+            "dependsOrder": "sequence"
+        },
+        {
+            "label": "build",
+            "type": "shell",
+            "command": "./build-all.ps1",
+            "args": [],
+            "problemMatcher": [],
+            "dependsOn": [
+                "clean",
+                "prepare"
+            ],
+            "dependsOrder": "sequence",
             "group": {
                 "kind": "build",
                 "isDefault": true
             }
+        },
+        {
+            "label": "publish",
+            "type": "shell",
+            "command": "./publish.ps1",
+            "args": [],
+            "problemMatcher": [],
+            "dependsOn": [
+                "build"
+            ],
+        },
+        {
+            "label": "test",
+            "type": "shell",
+            "command": "${workspaceRoot}/node_modules/.bin/spectral.ps1",
+            "args": ["lint", "src/*.yaml"],
+            "problemMatcher": [],
+            "dependsOn": [
+                "build",
+            ],
+            "group": {
+                "kind": "test",
+                "isDefault": true
+            }
+        },
+        {
+            "label": "clean",
+            "type": "shell",
+            "command": "./clean.ps1",
+            "args": [
+                "-folder",
+                "${workspaceRoot}/build"
+            ],
+            "problemMatcher": []
+        },
+        {
+            "label": "prepare",
+            "type": "shell",
+            "command": "mkdir ${workspaceRoot}/build; mkdir ${workspaceRoot}/build/tmp; mkdir ${workspaceRoot}/build/site",
+            "problemMatcher": []
         }
     ]
 }
