--- a/src/wallet.yaml
+++ b/src/wallet.yaml
@@ -6,7 +6,7 @@ info:
     The RPC ports should not be exposed to the internet. TLS certificates are used to secure the communication 
     [using mutualTLS](https://github.com/dkackman/chia-api/wiki/Mutual-TLS).
 
-    The wallet uses port 9256 by defualt.
+    The wallet uses port 9256 by default.
   version: 1.3.0
   title: Chia RPC
   termsOfService: https://www.chia.net/assets/legal/Guidelines-for-Using-Chia-Network.pdf
