--- a/src/full_node.yaml
+++ b/src/full_node.yaml
@@ -7,7 +7,7 @@ info:
     [using mutualTLS](https://github.com/dkackman/chia-api/wiki/Mutual-TLS).
 
     The full node uses port 8555 by default.  
-  version: 1.3.0
+  version: 1.3.1
   title: Chia RPC
   termsOfService: https://www.chia.net/assets/legal/Guidelines-for-Using-Chia-Network.pdf
   contact:
@@ -139,6 +139,34 @@ tags:
   - name: Mempool
     description: Get information about the mempool.
 paths:
+  /get_block_count_metrics:
+    post:
+      tags:
+        - Blocks
+      summary: Retrieves aggregate information about blocks.
+      description: Retrieves aggregate information about blocks.
+      operationId: get_block_count_metrics
+      requestBody:
+        $ref: "#/components/requestBodies/empty"
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                allOf:
+                  - type: object
+                    properties:
+                      metrics:
+                        type: object
+                        properties:
+                          compact_blocks:
+                            type: integer
+                          uncompact_blocks:
+                            type: integer
+                          hint_count:
+                            type: integer
+                  - $ref: "#/components/schemas/apiResponse"
   /stop_node:
     post:
       tags:
