--- a/package.json
+++ b/package.json
@@ -1,29 +1,26 @@
 {
-  "name": "chia-rpc",
-  "version": "1.3.0-beta.1",
-  "description": "Multi-file boilerplate for Open API Specification.",
+  "name": "chia-api",
+  "version": "1.3.1",
+  "description": "Build functinos for chia-api",
   "main": "index.js",
+  "directories": {
+    "doc": "docs"
+  },
   "scripts": {
-    "build": "swagger-cli bundle src/%npm_config_file%.yaml --outfile build/%npm_config_file%.yaml --type yaml",
-    "test": "npm run build && spectral lint build/%m_config_file%.yaml",
-    "preview": "npm run build && redoc-cli serve build/%npm_config_file%.yaml --options.onlyRequiredInSamples",
-    "html": "npm run build && redoc-cli bundle build/%npm_config_file%.yaml --output build/redoc/%npm_config_file%.html --options.theme.colors.primary.main=green",
-    "clean": "rimraf -r build"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/dkackman/chia-api.git"
   },
-  "license": "Apache 2.0",
+  "author": "",
+  "license": "Apache License 2.0",
   "bugs": {
     "url": "https://github.com/dkackman/chia-api/issues"
   },
   "homepage": "https://github.com/dkackman/chia-api#readme",
   "dependencies": {
-    "@apidevtools/swagger-cli": "^4.0.4",
+    "@redocly/openapi-cli": "^1.0.0-beta.89",
     "redoc-cli": "^0.13.9"
-  },
-  "devDependencies": {
-    "rimraf": "^3.0.2"
   }
 }
