--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -68,7 +68,7 @@
         {
             "label": "prepare",
             "type": "shell",
-            "command": "mkdir ${workspaceRoot}/build; mkdir ${workspaceRoot}/build/tmp; mkdir ${workspaceRoot}/build/site",
+            "command": "mkdir ${workspaceRoot}/build/tmp; mkdir ${workspaceRoot}/build/site",
             "problemMatcher": []
         }
     ]
