--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "doc": "docs"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "cli-help": "node tools/make-cli-help.js"
   },
   "repository": {
     "type": "git",
@@ -22,5 +22,9 @@
   "dependencies": {
     "@redocly/openapi-cli": "^1.0.0-beta.94",
     "redoc-cli": "^0.13.10"
+  },
+  "devDependencies": {
+    "js-yaml": "^4.1.0",
+    "lodash": "^4.17.21"
   }
 }
