--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -64,7 +64,7 @@
             "label": "bundle",
             "type": "shell",
             "command": "npx",
-            "args": ["@redocly/openapi-cli", "bundle", "src/*.yaml", "-o", "build/", "-d"],
+            "args": ["@redocly/openapi-cli", "bundle", "src/*.yaml", "-o", "build/bundle/", "-d"],
             "problemMatcher": [],
             "dependsOn": [
                 "clean", "prepare"
